exports[`Formschema Wizard > creates a new formschema based on own uploaded objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "test",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on own objectschema by code insterting #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "test",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on control objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "control",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on scope objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "scope",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on asset objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "asset",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on process objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on incident objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "incident",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on document objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "document",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on person objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "person",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on scenario objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "scenario",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by upload based on process objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by code inserting based on process objectschema  #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by uploading based on process objectschema also manually uploaded #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by uploading based on process objectschema by code insterting  #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": "Test Formschema",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};
